# ALE-OmniSwitch-MCP

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  INFRASTRUCTURE.md  IPAM_INTEGRATION.md  LICENSE  OPENWEBUI_LLM_OPTIMIZATION.md  OPEN_WEBUI.md  OPEN_WEBUI_OPENAPI_INTEGRATION.md  OPEN_WEBUI_QUICKSTART.md  README.md  RELEASE_v1.1.0.md  SECURITY.md  SECURITY_QUICKSTART.md  config.example.yaml  mcpo-config.docker.example.json  mcpo-config.example.json  pyproject.toml  requirements.txt
aos_server/: api_models.py  authz.py  autodiscover.py  config.py  dhcp_parse.py  facts.py  health_parse.py  interface_parse.py  inventory.py  lacp_parse.py  lldp_parse.py  main.py  mcp_sse.py  ntp_parse.py  poe_parse.py  policy.py  routing_parse.py  ssh_runner.py  stp_parse.py  tools.py  vlan_parse.py  zone_auth.py
aos_server/tools/: __init__.py  audit.py  base.py  cli.py  device.py  diag.py  network.py  system.py
deploy/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.example.yaml
examples/: 01_cli_readonly.md  02_device_facts.md  03_port_info.md  04_diag_poe.md  05_poe_restart.md  06_interfaces_discover.md  07_port_discover.md  08_vlan_audit.md  09_routing_audit.md  10_spantree_audit.md  11_config_backup.md  12_health_monitor.md  13_chassis_status.md  14_mac_lookup.md  README.md
